syntax = "proto3";

package proto;

service Heartbeat {
    rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
    string host = 1;
    uint64 term = 2;
    string event = 3;
}

message HeartbeatResponse {
    uint32 respcode = 1;
}
